Created Soko Connect Informational Website

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Soko Connect</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-
+<link rel="icon" href="images/sokoconnectlogo.png">
 </head>
 
 <body>
-    <!-- <p class="top-view">Skip the Line, Savor the Taste!</p> -->
+    <div class="intro">
+    <p>Skip the Line, Savor the Taste!</p>
+    </div>
     <nav class="navigation_bar">
         <img src="images/sokoconnectlogo.png" id="soko_connect">
         <ul class="nav-links">
@@ -60,7 +62,7 @@
         </div>
         <img src="images/about us now.png" alt="">
     </div>
-    <div class="banner">
+    <div class="discount">
         <h1>Get the best deal for modern grocery</h1>
         <div class="items">
             <p>Shop frequently and earn <br>a discount</p>
@@ -88,19 +90,18 @@
         </div>
     </div>
     <div class="product-categories">
-        <div class="item"><img src="images/white beans.jpg" alt="Cereals"><span>Cereals</span>
-        </div>
+        <div class="item"><span>Cereals</span><img src="images/white beans.jpg" alt="Cereals"></div>
         <div class="fresh-grocery">
             <h2>Fresh Groceries</h2>
             <p>Save your time by avoiding the queue</p>
             <button>Shop now</button>
         </div>
-        <div class="item"><img src="images/potatoes.jpg" alt="Vegetables"><span>Vegetables</span></div>
+        <div class="item"><span>Vegetables</span><img src="images/potatoes.jpg" alt="Vegetables"></div>
     </div>
     <div class="product-categories">
-        <div class="item"><img src="images/fishes.webp" alt="Fish"><span>Fish</span></div>
+        <div class="item"><span>Fish</span><img src="images/fishes.webp" alt="Fish"></div>
         <div class="item"><img src="images/veggies.jpg" alt="Fish"></div>
-        <div class="item"><img src="images/fresh-raw-garlic-ready-cook.jpg" alt="Others"><span>Others</span></div>
+        <div class="item"><span>Others</span><img src="images/fresh-raw-garlic-ready-cook.jpg" alt="Others"></div>
     </div>
     <div id="products" class="products">
         <h1>Products</h1>
@@ -180,23 +181,23 @@
                     <img src="images/vg10.jpg" alt="">
                     <p>"I used to spend hours at the grocery store. Now, with this app, I've saved significant time and
                         money."</p>
-                    <h2>Kevin Andrew</h2>
+                    <h3>Kevin Andrew</h3>
                 </div>
                 <div class="second-testimonial">
                     <img src="images/vd2.jpg" alt="">
                     <p>"I've saved a significant<br>
                         time and money since<br>
                         using this app"</p>
-                    <h2>Mary Jane</h2>
+                    <h3>Mary Jane</h3>
                 </div>
                 <div class="third-testimonial">
                     <img src="images/vg4.jpg" alt="">
                     <p>"I'd highly recommend <br>
                         this app to anyone<br>
                         looking for a affordable,<br>
-                        and enjoyable grocery/.
+                        and enjoyable grocery
                         !"</p>
-                    <h2>Eric Jackson</h2>
+                    <h3>Eric Jackson</h3>
                 </div>
             </div>
         </div>
