Added informational website

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="navigation_bar">
             <img src="images/sokoconnectlogo.png" id="soko_connect">
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#home" >Home</a></li>
+                <li><a href="#about" id="about-us-page">About Us</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#testimonials" id="testimonials-page">Testimonials</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
         </div>
@@ -111,9 +111,6 @@
         <div class="item"><img src="images/veggies.jpg" alt="Fish"></div>
         <div class="item"><span>Others</span><img src="images/fresh-raw-garlic-ready-cook.jpg" alt="Others"></div>
     </div>
-
-
-
     <div id="products">
         <h1>Products</h1>
         <div>
@@ -214,7 +211,6 @@
             </div>
         </div>
     </div>
-
     <div id="get-app">
         <div>
             <h1>Our App</h1>
@@ -240,12 +236,10 @@
                 </div>
             </button>
         </div>
-        <div class="app-container">
+        <div>
             <img id="app-parts" src="images/mobilephone.png" alt="">
         </div>
     </div>
-
-
     <div id="contact">
         <div class="contact-us">
             <div>
@@ -290,10 +284,8 @@
             </div>
         </div>
         <div id="copyright">
-            <p >@Copyright 2025 reserved Soko Connect</p>
+            <p >@Copyright 2025 reserved to AkiraChix</p>
         </div>
-        
-
     </div>
 </body>
 
